--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,6 +1,9 @@
 #Nav-Bar {
+  position: relative;
+  z-index: 1;
   width: 100%;
   height: 40px;
+  min-width: 390px;
   background: darkslategrey;
   justify-content: space-between;
 }
